[package]
name = "scollable_custom_shader"
version = "0.1.0"
authors = ["Bingus <shankern@protonmail.com>"]
edition = "2021"

[dependencies]
iced.workspace = true
iced.features = ["debug", "advanced", "image"]

image.workspace = true
bytemuck.workspace = true
glam.workspace = true
rustc-hash = "2.0.0"
